# c1_s2_algo_tree_processing

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  tree.c
lab1/: Makefile  README.md  tests.c  tree.h
lab2/: Makefile  README.md  main.c  random.txt  reversed.txt  sorted.txt  table.c  table.h  test_input.txt  tests.c
lab3/: Makefile  README.md  func.c  func.h  main.c  parser.c  parser.h  stacks.c  stacks.h  tests.c  tree.c  tree.h
